--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
 </head>
 <body>
    <a href="index.html"> <div class="one"><h1>POPERdim</h1></div></a>
-    <div class="overlay">
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, placeat rerum. Asperiores nesciunt neque culpa officiis voluptates voluptate nam dicta odit reprehenderit officia adipisci doloremque velit dolor, molestias ea exercitationem eveniet temporibus quis, eum maxime molestiae suscipit, similique accusantium inventore! Aut repellat harum mollitia accusamus! Ipsam alias facere error hic blanditiis voluptatum adipisci aliquam ullam, fuga autem? Quos praesentium alias quasi eum cupiditate consectetur vitae. Sint obcaecati ab necessitatibus. Alias quo ducimus nulla, pariatur iste laborum dolorum veritatis obcaecati necessitatibus tempora sit placeat error veniam? Suscipit atque iusto provident!
-        </h2>
-        <form action="ты.html">
-            <button >ты </button>
-        </form>
 
-    </div>
-    </div>
+<nav>
+    <a href="#">Модели </a>
+    <a href="#">Главная</a>
+    <a href="#">Заказ</a>
+    <div id="indicator"></div>
+  </nav>
+  <p>
+    <img src="img/fender-kurt-cobain-jaguar-nos-3ts_1_GIT0030281-000.jpg" alt="ягуар" width="320" height="320">
+    <img src="img/fender-limited-edition-player-jazzmaster-ice-blue-metallic-_1_GIT0058969-000.jpg" alt="джазмастер" width="320" height="320">
+    <img src="img/fender-mustang-mn-olympic-white_1_GIT0039396-000.jpg" alt="мустанг" width="320" height="320">
+  </p>
+    
 </body>
 </html>
