--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>POPER</title>
     <link href="style.css" rel="stylesheet" >
 
 </head>
@@ -13,15 +13,24 @@
 
 <nav>
     <a href="#">Модели </a>
-    <a href="#">Главная</a>
-    <a href="#">Заказ</a>
+    <a href="#">Контакты</a>
+    <a href="#">Заказы</a>
     <div id="indicator"></div>
   </nav>
+  <br>
+    <h4>
+      Модель "Fender"
+    </h4>
   <p>
     <img src="img/fender-kurt-cobain-jaguar-nos-3ts_1_GIT0030281-000.jpg" alt="ягуар" width="320" height="320">
     <img src="img/fender-limited-edition-player-jazzmaster-ice-blue-metallic-_1_GIT0058969-000.jpg" alt="джазмастер" width="320" height="320">
     <img src="img/fender-mustang-mn-olympic-white_1_GIT0039396-000.jpg" alt="мустанг" width="320" height="320">
   </p>
-    
+  <h4>Модель "Gibson"</h4>
+  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+<div id="footer"> &copy; POPERdim</div>
 </body>
 </html>
